<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:scrollbars="none"
    tools:context=".presentation.guidance.GuidanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_background"
        android:paddingBottom="32dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lexend_deca"
            android:text="Approach For Course Completion"
            android:textAlignment="center"
            android:textColor="@color/primary_blue"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/lexend_deca"
            android:text="Uniqueness Of Our Course"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/name_tv" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/desc_tv">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/uniqueness_course_card_bg"
                android:fontFamily="@font/lexend_deca"
                android:paddingHorizontal="2dp"
                android:paddingVertical="12dp"
                android:text="@string/unique_card_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/uniqueness_course_card_bg"
                android:fontFamily="@font/lexend_deca"
                android:paddingHorizontal="2dp"
                android:paddingVertical="12dp"
                android:text="@string/unique_card_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/uniqueness_course_card_bg"
                android:fontFamily="@font/lexend_deca"
                android:paddingHorizontal="2dp"
                android:paddingVertical="12dp"
                android:text="@string/unique_card_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/container_1">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/uniqueness_course_card_bg"
                android:fontFamily="@font/lexend_deca"
                android:paddingHorizontal="2dp"
                android:paddingVertical="12dp"
                android:text="@string/unique_card_4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/uniqueness_course_card_bg"
                android:fontFamily="@font/lexend_deca"
                android:paddingHorizontal="2dp"
                android:paddingVertical="12dp"
                android:text="@string/unique_card_5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/uniqueness_course_card_bg"
                android:fontFamily="@font/lexend_deca"
                android:paddingHorizontal="2dp"
                android:paddingVertical="12dp"
                android:text="@string/unique_card_6"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/section_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/lexend_deca"
            android:text="Eligibility for enrollment"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/container_2" />

        <View
            android:id="@+id/section_line_1"
            android:layout_width="96dp"
            android:layout_height="2dp"
            android:background="@color/primary_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_1_title" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/content_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/section_line_1">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="B. Tech/B.E completed or pursuing fourth year, any field"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="MBA or PG in any field with flare for learning computer program"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="Any undergraduate students who desires to upgrade skills"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lexend_deca"
            android:text="Uniqueness of the Course"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/content_1" />

        <View
            android:id="@+id/section_line_2"
            android:layout_width="96dp"
            android:layout_height="2dp"
            android:background="@color/primary_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_2" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/content_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/section_line_2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="One on One class to ensure that all the students understand the subject."
                android:textColor="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="Course Report prepared by each student to show case the creative part of the exercises worked, innovative content developed that will exhibit the perseverance of the student and the patience of the trainer."
                android:textColor="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="Project report covers the procedure followed and the research"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="outcome of the live project handled by each student in each course."
                android:textColor="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="6dp"
                android:drawableStart="@drawable/ic_tick"
                android:drawablePadding="4dp"
                android:drawableTint="@color/green"
                android:fontFamily="@font/lexend_deca"
                android:text="Commitment, sincerity and hard-work from the trainees, are much appreciated."
                android:textColor="@color/white"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>